# super-model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml  super-mode-setup.bat  super-mode-setup.py  super-mode-setup.sh  super-model-setup.bat  super-model-setup.py  super-model-setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: test.yml
agents/: code-implementer.md  code-reviewer.md
commands/: super-brainstorm.md  super-code-review.md  super-delete-branch.md  super-mcp-builder.md  super-mode-setup.md  super-model-setup.md  super-prepare-branch.md  super-visual-debug.md
docs/architecture/: cache-markers.md  config-cascade.md  hook-points.md  idempotency-model.md  super-execute-backends.md
hooks/: run-hook.cmd  session-start
schemas/: cache-marker.schema.json  config.schema.json  module-frontmatter.schema.json
scripts/super_lib/: _hmac.py  _io.py  cache.py  config.py  modules.py
skills/super-brainstorm/: SKILL.md  manifest.json
skills/super-code-review/: SKILL.md  manifest.json
skills/super-delete-branch/: SKILL.md  manifest.json
skills/super-execute/: SKILL.md  manifest.json
skills/super-mcp-builder/: SKILL.md  manifest.json
skills/super-mode-setup/: SKILL.md  manifest.json
skills/super-model-setup/: SKILL.md  manifest.json
skills/super-prepare-branch/: SKILL.md  manifest.json
skills/super-visual-debug/: SKILL.md  manifest.json
(+85 files in other folders)
