[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super-model"
version = "0.3.0-dev"
description = "Per-project agentic skills library for AI coding IDEs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Harry Werner", email = "hwerner2014@gmail.com"},
]
keywords = ["skills", "agentic", "tdd", "debugging", "claude-code", "cursor", "windsurf", "per-project"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "jsonschema>=4.0",
  "pyyaml>=6.0",
  "filelock>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/hwerner2014/super-model"
Repository = "https://github.com/hwerner2014/super-model"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts.super_lib*"]
namespaces = true
